table overflow fix #3

--- a/public/styles.css
+++ b/public/styles.css
@@ -55,7 +55,6 @@ th, td {
 th {
     background-color: #f2f2f2;
     font-weight: bold;
-    font-size: 12px;
 }
 
 tr:last-child td {
@@ -65,6 +64,10 @@ tr:last-child td {
 tr:hover {
     background-color: #f5f5f5;
     cursor: pointer;
+}
+
+tbody {
+    font-size: 12px;
 }
 
 button {
